<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/colorClouds"
    tools:context="chris.me.doorie.MainActivity">

    <Button
        android:id="@+id/l"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/r"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:text="@string/l_door" />

    <Button
        android:id="@+id/r"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:text="@string/r_door" />

    <EditText
        android:id="@+id/editPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/r"
        android:layout_alignLeft="@+id/l"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/r"
        android:layout_alignStart="@+id/l"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/pls_enter_pin"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:fontFamily="serif-monospace"
        android:text="App by Chris"
        android:textSize="18sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/tv_pls_wifi_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pls_activate_internet"
        android:textAlignment="viewStart"
        android:textSize="13sp"
        android:maxLines = "7"
        android:scrollbars = "vertical"
        android:layout_below="@+id/tv_to_open_close"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tv_to_open_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/l"
        android:layout_marginTop="43dp"
        android:text="@string/to_open_close"
        android:textSize="10sp" />


</RelativeLayout>
